--- a/index.html
+++ b/index.html
@@ -15,21 +15,34 @@
         /* Body and Background */
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f9e2e2; /* Soft pink background */
+            height: 100vh;
+            background: url('https://i.pinimg.com/originals/0d/97/52/0d9752d099359e13b3b6defc75c28072.gif') no-repeat center center fixed;
+            background-size: cover;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            color: white;
             flex-direction: column;
             text-align: center;
         }
 
+        /* Overlay to darken the background */
+        .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5); /* Dark semi-transparent overlay */
+        }
+
         /* Card Styles */
         .card {
-            background-color: #fff;
+            position: relative;
+            background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white */
             padding: 30px;
             border-radius: 15px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
             width: 80%;
             max-width: 600px;
         }
@@ -67,20 +80,16 @@
         .blurred-text.unblurred {
             filter: blur(0);
         }
-
-        /* GIF Styling */
-        .gif {
-            max-width: 100%;
-            height: auto;
-            border-radius: 10px;
-        }
     </style>
 </head>
 <body>
+    <!-- Overlay for darkening the background -->
+    <div class="overlay"></div>
+
+    <!-- Content Card -->
     <div class="card">
         <h1 class="message">I hope you get better</h1>
         <p class="date">2/14/25 – More gifts otw</p>
-        <img src="https://i.pinimg.com/originals/0d/97/52/0d9752d099359e13b3b6defc75c28072.gif" alt="Valentine's Day Gif" class="gif">
 
         <!-- Blurred Text Block -->
         <div class="blurred-text" onclick="unblurText()">Click me</div>
