--- a/index.html
+++ b/index.html
@@ -29,26 +29,27 @@
 
         /* Sidebar Styles */
         .sidebar {
-            position: absolute;
+            position: fixed;
             top: 0;
-            left: 0;
+            left: -250px; /* Hidden initially */
             width: 250px;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.7);
-            color: white;
+            background-color: white;
+            color: black;
             padding: 20px;
             border-right: 2px solid #f50057;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: flex-start;
             align-items: center;
             font-size: 1.2rem;
-            text-align: center;
+            text-align: left;
+            transition: left 0.3s ease-in-out;
         }
 
         /* Sidebar Links */
         .sidebar a {
-            color: white;
+            color: black;
             text-decoration: none;
             margin: 20px 0;
             padding: 10px;
@@ -61,6 +62,7 @@
 
         .sidebar a:hover {
             background-color: #d5006d;
+            color: white;
         }
 
         /* Overlay to darken the background */
@@ -71,6 +73,7 @@
             width: 100%;
             height: 100%;
             background: rgba(0, 0, 0, 0.5); /* Dark semi-transparent overlay */
+            display: none;
         }
 
         /* Content Card */
@@ -118,17 +121,34 @@
         .blurred-text.unblurred {
             filter: blur(0);
         }
+
+        /* Menu Toggle Button */
+        .menu-toggle {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            background-color: rgba(255, 255, 255, 0.8);
+            border: none;
+            padding: 10px;
+            font-size: 1.5rem;
+            cursor: pointer;
+            border-radius: 50%;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
     </style>
 </head>
 <body>
+    <!-- Menu Button -->
+    <button class="menu-toggle" onclick="toggleSidebar()">&#9776;</button>
+
     <!-- Sidebar -->
-    <div class="sidebar">
+    <div class="sidebar" id="sidebar">
         <a href="#" onclick="goHome()">Home</a>
         <a href="#" onclick="showFlirtyMessage()">Discord Nitro</a>
     </div>
 
     <!-- Overlay for darkening the background -->
-    <div class="overlay"></div>
+    <div class="overlay" id="overlay" onclick="closeSidebar()"></div>
 
     <!-- Content Card -->
     <div class="content">
@@ -173,6 +193,31 @@
             // Change background to Nitro GIF after clicking
             document.body.style.background = "url('https://i.pinimg.com/originals/15/8b/88/158b886aca8ce4421934166eed498481.gif') no-repeat center center fixed";
             document.body.style.backgroundSize = "cover"; // Make sure the GIF covers the entire background
+        }
+
+        // Function to toggle the sidebar visibility
+        function toggleSidebar() {
+            const sidebar = document.getElementById('sidebar');
+            const overlay = document.getElementById('overlay');
+            const sidebarLeft = sidebar.style.left;
+
+            if (sidebarLeft === "0px") {
+                // Close the sidebar
+                sidebar.style.left = "-250px";
+                overlay.style.display = "none";
+            } else {
+                // Open the sidebar
+                sidebar.style.left = "0px";
+                overlay.style.display = "block";
+            }
+        }
+
+        // Function to close the sidebar when clicking on overlay
+        function closeSidebar() {
+            const sidebar = document.getElementById('sidebar');
+            const overlay = document.getElementById('overlay');
+            sidebar.style.left = "-250px";
+            overlay.style.display = "none";
         }
     </script>
 </body>
